Fixed alignment and sizes

--- a/css/text_overlay.css
+++ b/css/text_overlay.css
@@ -3,14 +3,13 @@ span.text-content {
   color: white;
   cursor: pointer;
   display: table;
-  height: 150px;
   left: 0;
   position: absolute;
   top: 0;
-  width: 150px;
 }
 
 span.text-content span {
+  padding-top: 12px;
   display: table-cell;
   text-align: center;
   vertical-align: middle;
@@ -23,8 +22,12 @@ span.text-content {
   left: 0;
   position: absolute;
   top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 1000px;
   opacity: 0;
-   -webkit-transition: opacity 500ms;
+  -webkit-transition: opacity 500ms;
   -moz-transition: opacity 500ms;
   -o-transition: opacity 500ms;
   transition: opacity 500ms;
